feat: 티베로 파일 압축 풀기